# Zolver

./: Makefile  README.md  configure  configure.in
check/: Makefile  configure.in  faster_naive.rbz  test  test.rbz
check/default/: .ignore  Makefile  configure.in  test.cc
check/game/: configure.in  test.cc
levels/: big.rbz  green.rbz
scripts/: check  src  svn_pappend  tarball  todo
src/: action.cc  action.hh  basic_solver.cc  basic_solver.hh  board.cc  board.hh  board.hxx  cell.cc  cell.hh  cell.hxx  color.cc  color.hh  color.hxx  direction.cc  direction.hh  direction.hxx  game.cc  game.hh  game.hxx  iterative_solver.cc  iterative_solver.hh  iterative_solver.hxx  main.cc  misc.hh  options.cc  options.hh  options.hxx  parser.cc  parser.hh  point.cc  point.hh  processor.cc  processor.hh  processor.hxx  program.cc  program.hh  program.hxx  ship.cc  ship.hh  ship.hxx  (+3 more)
src/game/: action.hh  action.hxx  board.cc  board.hh  board.hxx  cell.cc  cell.hh  cell.hxx  color.hh  color.hxx  direction.hh  direction.hxx  game.cc  game.hh  game.hxx  game_io.cc  game_io.hh  instruction.cc  instruction.hh  instruction.hxx  point.hh  processor.cc  processor.hh  processor.hxx  program.cc  program.hh  program.hxx  ship.cc  ship.hh  ship.hxx
src/misc/: foreach.hh
src/solvers/: basic_solver.cc  basic_solver.hh  better_solver.cc  better_solver.hh  instruction_data.cc  instruction_data.hh  solver.cc  solver.hh  solver.hxx
src/testers/: basic_tester.cc  basic_tester.hh  better_tester.cc  better_tester.hh  tester.hh
